tc-agent/app/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tc-agent
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: {}
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: tc-agent
        image: ghcr.io/medizininformatik-initiative/fts/trust-center-agent:5.6.0
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /app/application.yaml
          subPath: application.yaml
        - name: ca-certs
          mountPath: /certificates
          readOnly: true
        startupProbe:
          httpGet: &probe
            path: /actuator/health
            port: http
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "1Gi"
          limits:
            memory: "1Gi"
      volumes:
      - name: config
        configMap:
          name: tc-agent-config
      - name: ca-certs
        configMap:
          name: life-ca-certs
          items:
          - key: life-root-ca-2.pem
            path: life-root-ca-2.crt
