tc-agent/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tc-agent
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector: {}
